src/test/ui/did_you_mean/issue-40396.stderr
error: chained comparison operators require parentheses
  --> $DIR/issue-40396.rs:2:20
   |
LL |     (0..13).collect<Vec<i32>>();
   |                    ^^^^^
   |
help: use `::<...>` instead of `<...>` to specify type arguments
   |
LL |     (0..13).collect::<Vec<i32>>();
   |                    ^^

error: chained comparison operators require parentheses
  --> $DIR/issue-40396.rs:4:8
   |
LL |     Vec<i32>::new();
   |        ^^^^^
   |
help: use `::<...>` instead of `<...>` to specify type arguments
   |
LL |     Vec::<i32>::new();
   |        ^^

error: chained comparison operators require parentheses
  --> $DIR/issue-40396.rs:6:20
   |
LL |     (0..13).collect<Vec<i32>();
   |                    ^^^^^
   |
help: use `::<...>` instead of `<...>` to specify type arguments
   |
LL |     (0..13).collect::<Vec<i32>();
   |                    ^^

error: aborting due to 3 previous errors

